narrow phone resolution wrapping fixed

--- a/src/components/WeatherCarousel/WeatherCarousel.css
+++ b/src/components/WeatherCarousel/WeatherCarousel.css
@@ -1,15 +1,14 @@
 .Weather-content {
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    height: 40vh;
-    gap: 5px;
-  }
+  display: grid;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
 
 .Weather-Carousel {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 1em;
+  justify-content: center;
+  align-items: center;
 }
